--- a/css/style.css
+++ b/css/style.css
@@ -1,155 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+body {
+  background-color:rgb(233, 227, 227);
+  position:relative;
+  font-size:14px;
+  font-family:arial;
+}
+ul{
+  list-style: none;
+}
+.mask {
+  float:left; 
+  margin:40px;
+  width:400px;
+  height:266px;
+  overflow:hidden;
+}
+ul.images {
+  position:relative; 
+  top:0px;
+  left:0px;
+}
+  ul.images li {
+  position:absolute;
+  top:0px;
+  left:0px;
 }
 
-body{
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #000116;
+ul.triggers {
+  position:absolute;
+  top:310px;
+  left:120px;
 }
 
+ul.triggers li { 
+  float:left;
+  margin:0 5px;
+  font: bold 16px arial; 
+  cursor:pointer;
+  background-color:#ccc;
+  color:#000;
+  padding:8px;
+  border-radius: 50%;
+}
+ul.triggers li.active {
+  background-color:rgb(72, 209, 95); 
+  border: 2px solid rgb(78, 78, 78);
+  color:#000;
+}
+.control {
+  position:absolute;
+  top: 380px;
+  color:#fff; 
+  cursor:pointer;
+}
+.prev {
+  left:160px;
+}
+.next { 
+  left:250px;
+}
 button{
-	border: none;
-	outline: none;
-	background-color: rgba(255,255,255,.8);
-	color: #333;
-	padding: 6px 8px;
-	border-radius: 4px;
-	cursor: pointer;
-	margin: 0 6px;
-	transition: .5s ease;
-}
-button:hover{
-	background-color: rgba(255,255,255,.9);
-}
-
-.slider{
-  position: relative;
-  background: #000116;
-  width: 800px;
-  min-height: 500px;
-  margin: 20px;
-  overflow: hidden;
-  border-radius: 10px;
-}
-
-.slider .slide{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-}
-
-.slider .slide.active{
-  opacity: 1;
-  transition: 1s;
-}
-
-.slider .slide img{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.slider .slide .info{
-  position: absolute;
-  color: #222;
-  background: rgba(255, 255, 255, 0.3);
-  width: 75%;
-  margin-top: 50px;
-  margin-left: 50px;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 5px 25px rgb(1 1 1 / 5%);
-}
-
-.slider .slide .info h2{
-  font-size: 2em;
-  font-weight: 800;
-}
-
-.slider .slide .info p{
-  font-size: 1em;
-  font-weight: 400;
-}
-
-.navigation{
-  height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-
-.prev-btn, .next-btn{
-  z-index: 999;
-  font-size: 2em;
-  color: #222;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 10px;
+  padding: 8px 18px;
   cursor: pointer;
 }
-
-.prev-btn{
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-
-.next-btn{
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-
-.navigation-visibility{
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-}
-
-.navigation-visibility .slide-icon{
-  z-index: 999;
-  background: rgba(255, 255, 255, 0.5);
-  width: 20px;
-  height: 10px;
-  transform: translateY(-50px);
-  margin: 0 6px;
-  border-radius: 2px;
-  box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
-}
-
-.navigation-visibility .slide-icon.active{
-  background: #4285F4;
-}
-
-@media (max-width: 900px){
-  .slider{
-    width: 100%;
-  }
-
-  .slider .slide .info{
-    position: relative;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media (max-width: 500px){
-  .slider .slide .info h2{
-    font-size: 1.8em;
-    line-height: 40px;
-  }
-
-  .slider .slide .info p{
-    font-size: 0.9em;
-  }
-}
-      
